[tool.poetry]
name = "dbml"
version = "0.1.0"
description = "Convert SQLAlchemy/SQLModel into DBML, and the other way around! 🎉"
authors = ["Marcelo Trylesinski <marcelotryle@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Kludex/dbml"
include = ["dbml/py.typed"]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.scripts]
dbml = "dbml.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
sqlmodel = "^0.0.4"
SQLAlchemy = "^1.4.27"
rich = "^10.15.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^21.9b0"
flake8 = "^3.9.0"
isort = "^5.0"
pre-commit = "^2.9.3"
pytest = "^6.2"
pytest-cov = "^2.10.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
